--- a/Portal/Pages/Index.cshtml
+++ b/Portal/Pages/Index.cshtml
@@ -36,14 +36,14 @@
                     <div class="row mb-2">
                         <label for="inputTotalSupply" class="col-sm-3 col-form-label">TotalSupply</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="inputTotalSupply">
+                            <input type="number" class="form-control" id="inputTotalSupply">
                         </div>
                     </div>
                     
                     <div class="row mb-2">
                         <label for="inputTotalHolders" class="col-sm-3 col-form-label">Total Holders</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" id="inputTotalHolders">
+                            <input type="number" class="form-control" id="inputTotalHolders">
                         </div>
                     </div>
 
@@ -56,7 +56,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header">Token Statistics by Token Supply</div>
-                <div class="card-body" style="height: 300px">
+                <div  class="card-body" style="height: 300px">
                     <div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;">
                         <div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
                             <div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div>
@@ -64,7 +64,10 @@
                         <div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
                             <div style="position:absolute;width:200%;height:200%;left:0; top:0"></div>
                         </div>
-                    </div> <canvas id="chart-line" width="299" height="130" class="chartjs-render-monitor" style="display: block; width: 299px; height: 130px;"></canvas>
+                    </div> 
+                    <div id="chartLocation">
+
+                    </div>
                 </div>
             </div>
 
@@ -89,41 +92,17 @@
                         </tr>
                         </thead>
                         <tbody id="dataTbBody">
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                         </tbody>
                     </table>
+
+                    
+                    <nav aria-label="TablePaginate">
+                        <ul id="paginateId" class="pagination">
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item active"><span class="page-link">2</span></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        </ul>
+                    </nav>
 
                 </section>
             </div>
@@ -200,6 +179,9 @@
 </div>
 
 <script>
+
+    let chart = null;
+
     $("#tokenForm").submit(function (e) {
         // prevent submit
         e.preventDefault();
@@ -251,54 +233,41 @@
     {
         $.ajax({
             type: "Get",
-            url: "http://localhost:5262/Token?pageNo=" + pageNo,
+            url: "http://localhost:5262/Token/GetPaginateList?pageNo=" + pageNo,
             contentType: "application/json; charset=utf-8",
             success: function (response) {
                 console.log(response);
+
+
                 $("#dataTbBody").empty();
                 $("#chart-line").empty();
-                for (let i = 0; i < response.length; i++) {
-                    var newRowContent = `<tr><th scope="row">` + (i + 1) + "</th>" +
-                        `<td><a href="#" onclick="displayDetail(${response[i].id});return false;">${response[i].symbol}</a></td>` +
-                        "<td>" + response[i].name + "</td>" +
-                        "<td>" + response[i].contractAddress + "</td>" +
-                        "<td>" + response[i].totalHolders + "</td>" +
-                        "<td>" + response[i].totalSupply + "</td>" +
-                        "<td>" + response[i].totalSupplyPercentage + "</td>" +
-                        `<td><button type="button" class="btn btn-secondary" onclick="editTBody(${response[i].id})">Edit</button></td>`;
+                let chartLabels = [];
+                let chartDateSets = [];
+                for (let i = 0; i < response.data.length; i++) {
+                    var newRowContent = `<tr><th scope="row">` + ((i + 1) + (pageNo - 1) * 10) + "</th>" +
+                        `<td><a href="#" onclick="displayDetail(${response.data[i].id});return false;">${response.data[i].symbol}</a></td>` +
+                        "<td>" + response.data[i].name + "</td>" +
+                        "<td>" + response.data[i].contractAddress + "</td>" +
+                        "<td>" + response.data[i].totalHolders + "</td>" +
+                        "<td>" + response.data[i].totalSupply + "</td>" +
+                        "<td>" + response.data[i].totalSupplyPercentage + "</td>" +
+                        `<td><button type="button" class="btn btn-secondary" onclick="editTBody(${response.data[i].id})">Edit</button></td>`;
 
                     $("#dataTbBody").append(newRowContent);
+
+                    chartLabels.push(response.data[i].symbol);
+                    chartDateSets.push(response.data[i].totalSupply);
                 }
 
+                $("#chartLocation").empty();
+                $("#chartLocation").append(`<canvas id="chart-line" width="299" height="130" class="chartjs-render-monitor" style="display: block; width: 299px; height: 130px;"></canvas>`);
                 var ctx = $("#chart-line");
-                var myLineChart = new Chart(ctx, {
+                chart = new Chart(ctx, {
                     type: 'doughnut',
                     data: {
-                        labels: [
-                            response[0].symbol, 
-                            response[1].symbol, 
-                            response[2].symbol, 
-                            response[3].symbol, 
-                            response[4].symbol, 
-                            response[5].symbol, 
-                            response[6].symbol, 
-                            response[7].symbol, 
-                            response[8].symbol,
-                            response[9].symbol
-                        ],
+                        labels: chartLabels,
                         datasets: [{
-                            data: [
-                                response[0].totalSupply, 
-                                response[1].totalSupply, 
-                                response[2].totalSupply, 
-                                response[3].totalSupply, 
-                                response[4].totalSupply, 
-                                response[5].totalSupply, 
-                                response[6].totalSupply, 
-                                response[7].totalSupply, 
-                                response[8].totalSupply,
-                                response[9].totalSupply
-                            ],
+                            data: chartDateSets,
                             backgroundColor: ["" +
                                 "rgba(255, 0, 0, 0.5)", 
                                 "rgba(100, 255, 0, 0.5)", 
@@ -309,10 +278,23 @@
                                 "rgba(150, 50, 255, 0.5)", 
                                 "rgba(160, 60, 255, 0.5)", 
                                 "rgba(170, 70, 255, 0.5)", 
-                                "rgba(0, 100, 255, 0.5)"]
+                                response.data[9]?.symbol ? "rgba(0, 100, 255, 0.5)" : ""
+                            ]
                         }]
                     }
                 });
+
+                $("#paginateId").empty();
+                for (let i = 1; i <= response.totalPage; i++) {
+                    let appendPaginate = '';
+                    if (pageNo == i) {
+                        appendPaginate = `<li class="page-item active"><span class="page-link">${i}</span></li>`;
+                    } else {
+                        appendPaginate = `<li class="page-item"><a class="page-link" href="#" onclick="getTokenList(${i})" >${i}</a></li>`;
+                    }
+
+                    $("#paginateId").append(appendPaginate);
+                }
 
             },
             error: function (xhr, ajaxOptions, thrownError) {
